# C-

./: .gitignore  README.md  main.cpp
Boost/: CMakeLists.txt  boostHelloWorld.cpp
C++Theory/: Bit manipulation.cpp  CMakeLists.txt  MoveSemantic.cpp  STL.cpp  SomeOOP.cpp
C++Theory/Algorighms/: CMakeLists.txt  HashTable.cpp
C++Theory/Concepts/: CMakeLists.txt  main.cpp
C++Theory/ContainerLibrary/: CMakeLists.txt  Container.cpp
C++Theory/IOLibrary/: CMakeLists.txt  Points.txt  Text.txt  main.cpp
C++Theory/Metaprogramming/: CMakeLists.txt  main.cpp
C++Theory/Tour to C++/: CMakeLists.txt  Chapter1.cpp  Chapter2.cpp  Chapter9.cpp  STL.cpp  SomeOOP.cpp
C++Theory/Tour to C++/Chapter3/: Chapter3.cpp  Foo.ifc  Foo.ixx  Here  bezierMath.ifc  bezierMath.ixx
C++Theory/Tour to C++/Chapter3/Bezier-Curve/: Here  bezierMath.h
C++Theory/Tour to C++/Chapter3/Bezier-Curve/DynamicLibrary/: Factorial.cpp  bezierMath.cpp  bezierMath.exp  bezierMath.lib
C++Theory/Tour to C++/Chapter3/Bezier-Curve/StaticLibrary/: CommandFile  bezierCurve.lib
C++Theory/Tour to C++/Chapter3/bezierMath/: bezierMath.cpp  bezierMath.h
C++Theory/std_optional/: CMakeLists.txt  sequence.cpp
CMake/: CMakeLists.txt  WorkingWithFiles.txt  foo.h  foo.h.in  pack_net.in  pack_net.out
CUDA/AddVectors/: CMakeLists.txt  main.cpp  main.cu
C_Callbacks/: CMakeLists.txt  main.cpp
GTest/: CMakeLists.txt
OpenCV/: CMakeLists.txt  OpenCVHelloWorld.cpp  Playground.cpp
OpenMP/: CMakeLists.txt  main.cpp  printworld.cpp
